--- a/css/typography.css
+++ b/css/typography.css
@@ -52,7 +52,7 @@ a {
 }
 
 a:hover {
-  color: var(--pink-color);
+  color: var(--main-text-color);
 }
 
 .quote {
